# auto-jibble-in

./: .gitattributes  Cargo.toml
src/: main.rs  scrapper.rs  web_driver.rs
