[package]
name = "auto-jibble-in"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.4", features = ["derive", "cargo"] }
selenium-manager = { git = "https://github.com/SeleniumHQ/selenium", branch = "trunk" }
thirtyfour = "0.31.0"
tokio = { version = "1.27.0", features = ["full"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"